issue regarding title wraps for short show names

--- a/pages/dashboard/style.css
+++ b/pages/dashboard/style.css
@@ -203,7 +203,6 @@
 .titles {
   margin-left: 20px;
   transform: translateX(236px) translateY(10px);
-  width: min-content;
   height: 0;
   overflow: visible;
 }
